objects/Negotiator__c/Negotiator__c.object-meta.xml
<CustomObject>
    <label>Negotiator</label>
    <nameField>
        <label>Negotiator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Negotiator</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>