objects/Negotiator__c/fields/Freight_Charge__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge__c</fullName>
    <label>Freight_Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>