objects/Negotiator__c/fields/Pocket_Margin1__c.field-meta.xml
<CustomField>
    <fullName>Pocket_Margin1__c</fullName>
    <label>Pocket Margin1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>