objects/Negotiator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Additional_Discount__c</columns>
    <columns>Base_Price__c</columns>
    <columns>Customer_Price__c</columns>
    <columns>Family_Adjustment__c</columns>
    <columns>Freight_Charge__c</columns>
    <columns>Invoice_Price__c</columns>
    <columns>GLobal_List_Price__c</columns>
    <columns>Net_Price__c</columns>
    <columns>Pocket_Price__c</columns>
    <columns>Pocket_Margin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>